force-app/main/default/objects/Rice_Mill__c/Rice_Mill__c.object-meta.xml
<CustomObject>
    <label>Rice Mill</label>
    <nameField>
        <displayFormat>Rice-{000}</displayFormat>
        <label>Rice Mill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rice Mills</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>