force-app/main/default/objects/Rice_Mill__c/fields/Rice_Distributed_To_Shops__c.field-meta.xml
<CustomField>
    <fullName>Rice_Distributed_To_Shops__c</fullName>
    <label>Rice Distributed To Shops</label>
    <summarizedField>Rice_Detail__c.Rice_Distributed__c</summarizedField>
    <summaryForeignKey>Rice_Detail__c.Rice_Mill_1_one__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>