force-app/main/default/objects/Rice_Mill__c/fields/Rice_Price_Kg__c.field-meta.xml
<CustomField>
    <fullName>Rice_Price_Kg__c</fullName>
    <label>Rice Price/Kg</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>