force-app/main/default/objects/Rice_Mill__c/fields/Rice_Taken__c.field-meta.xml
<CustomField>
    <fullName>Rice_Taken__c</fullName>
    <label>Rice Taken</label>
    <summarizedField>Consumer__c.Rice_Taken_By_Shops_In_Kgs__c</summarizedField>
    <summaryForeignKey>Consumer__c.Rice_Mill_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>